# CS4380-emulator-assembler

./: .gitignore  CMakeLists.txt  README.md
assembler/: '  asm4380.py  assembler.py  emu4380  file_handle.py  parse.py  test_asm.py
assembler/tests/: 1.asm  attempt_to_fail.asm  simple.asm  t.asm  test.asm  test_asm.py  tests.py
include/: .emu4380.h.swp  cache.h  emu4380.h
proj4progs/: prog_a.asm  prog_b.asm  prog_c.asm  prog_d.asm
project3_writeup/: project3_writeup.md
project_4_programs/: prog_a.asm  prog_b.asm  prog_c.asm  prog_d.asm
src/: .emu4380.cpp.swp  cache.cpp  emu4380.cpp  main.cpp
tests/: a.out  all_instr_test.txt  conv  conv_byte.cpp  correct_instr.txt  input_test.txt  invalid_instr.txt  t.cpp  test1.txt  testF.txt  tests.cpp  trap_tests.txt
